Add data Isolated NFW profile.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,14 @@
   </head>
 <body>
  
-Hello world
+  <h1><a href="https://github.com/junkoda/sidm-nbody">sidm-nbody</a></h1>
+
+  <h2>Sample initial conditions<h2>
+  <ul>
+    <li><a href="data/eddington_nfw_far_80_in">Isolated NFW (GADGET binary format)</a></li>
+  </ul>
+
+  
  
 </body>
 </html>
